# img2a-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-linux.yml  rust.yml
src/: convert.rs  main.rs  test.rs
