[package]
authors = ["Vitalii Kmit <vitalikkmita@gmail.com>"]
description = "img2a is a utility that converts images into ASCII art, written in Rust programming language"
name = "img2a"
version = "0.1.0"
edition = "2021"
website = "https://github.com/Vitalya-code/img2a-rs"
license = "GPL3"
readme = "README.md"
repository = "https://github.com/Vitalya-code/img2a-rs"

[dependencies]
image = "0.24.7"
terminal_size = "0.3.0"
colored = "2.0.4"
clap = { version = "4.4.7", features = ["derive"] }
arboard = "3.2.1"
rayon = "1.8.0"

[dev-dependencies]
rand = "0.8.5"

